crates/swc_ecma_parser/tests/test262-error-references/fail/1a32df2e8d4bea98.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/1a32df2e8d4bea98.js:1:21
  |
1 | function *g() { var yield; }
  |                     ^^^^^

